--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <title>
-   My Blog
-  </title>
- </head>
- <body>
-  <h1>
-   My Blog
-  </h1>
-  <a href="index.html">
-   Home
-  </a>
-  <a href="content\2.html">
-   2
-  </a>
- </body>
-</html>
+asdfghjkl
